# Laboratorio4pa

./: .gitignore  CMakeLists.txt  Makefile
diagramas laboratorio 3-20250618T185832Z-1-001/diagramas laboratorio 3/: 5v_Lab3.docx  Alta de Producto  Alta de Usuario.drawio  Consultar Producto.drawio  ConsultarPromocion.drawio  Crear Promocion  Dejar Comentario.drawio  Diagrama de Clase.drawio  Eliminar Comentario.drawio  Enviar Producto.drawio  RealizarCompra.drawio
src/: Principal.cpp  main.cpp
src/DTs/: DTCliente.cpp  DTCliente.h  DTComentario.cpp  DTComentario.h  DTCompra.cpp  DTCompra.h  DTDireccion.cpp  DTDireccion.h  DTFecha.cpp  DTFecha.h  DTProdComprado.cpp  DTProdComprado.h  DTProdPromocion.cpp  DTProdPromocion.h  DTProducto.cpp  DTProducto.h  DTPromocion.cpp  DTPromocion.h  DTUsuario.cpp  DTUsuario.h  DTVendedor.cpp  DTVendedor.h  Definiciones.h
src/logica/DTs/: DTCliente.cpp  DTCliente.h  DTDireccion.h  DTFecha.cpp  DTFecha.h  DTUsuario.cpp  DTVendedor.cpp
src/logica/controlador/: SistemaControlador.cpp  SistemaControlador.h
src/logica/dominio/: Cliente.cpp  Cliente.h  Comentario.cpp  Comentario.h  Compra.cpp  Compra.h  ProdComprado.cpp  ProdComprado.h  ProdPromocion.cpp  ProdPromocion.h  Producto.cpp  Producto.h  Promocion.cpp  Promocion.h  Usuario.cpp  Usuario.h  Vendedor.cpp  Vendedor.h
src/presentacion/: AltaProducto.cpp  AltaProducto.h  AltaUsuario.cpp  AltaUsuario.h  ConsultarProducto.cpp  ConsultarProducto.h  ConsultarPromocion.cpp  ConsultarPromocion.h  CrearPromocion.cpp  CrearPromocion.h  DejarComentario.cpp  DejarComentario.h  EliminarComentario.cpp  EliminarComentario.h  EnviarProducto.cpp  EnviarProducto.h  ExpedienteUsuario.cpp  ExpedienteUsuario.h  ListadoUsuarios.cpp  ListadoUsuarios.h  Login.h  Menu.cpp  Menu.h  RealizarCompra.cpp  RealizarCompra.h
