cmake_minimum_required(VERSION 3.30)
project(Dis_EjemploArquitecturaLogin)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(
        ${CMAKE_SOURCE_DIR}/src
        ${CMAKE_SOURCE_DIR}/src/DTs
        ${CMAKE_SOURCE_DIR}/src/logica/controlador
        ${CMAKE_SOURCE_DIR}/src/logica/dominio
        ${CMAKE_SOURCE_DIR}/src/presentacion
)
add_executable(Dis_EjemploArquitecturaLogin
        src/main.cpp
        src/logica/controlador/SistemaControlador.cpp
        src/logica/controlador/SistemaControlador.h
        src/logica/dominio/Compra.cpp
        src/logica/dominio/Usuario.cpp
        src/logica/dominio/Usuario.h
        src/logica/dominio/Cliente.cpp
        src/logica/dominio/Cliente.h
        src/logica/dominio/Producto.cpp
        src/logica/dominio/Producto.h
        src/logica/dominio/Vendedor.cpp
        src/logica/dominio/Vendedor.h
        src/presentacion/AltaUsuario.cpp
        src/presentacion/AltaUsuario.h
        src/presentacion/ListadoUsuarios.cpp
        src/presentacion/ListadoUsuarios.h
        src/presentacion/AltaProducto.cpp
        src/presentacion/AltaProducto.h
        src/DTs/DTVendedor.h
        src/DTs/DTVendedor.cpp
        src/DTs/DTUsuario.h
        src/DTs/DTUsuario.cpp
        src/DTs/DTPromocion.h
        src/DTs/DTPromocion.cpp
        src/DTs/DTProducto.cpp
        src/DTs/DTProducto.h
        src/DTs/DTProdPromocion.h
        src/DTs/DTProdComprado.h
        src/DTs/DTProdPromocion.cpp
        src/DTs/DTProdComprado.cpp
        src/DTs/DTFecha.h
        src/DTs/DTFecha.cpp
        src/DTs/DTDireccion.cpp
        src/DTs/DTDireccion.h
        src/DTs/DTCompra.h
        src/DTs/DTComentario.h
        src/DTs/DTCompra.cpp
        src/DTs/DTComentario.cpp
        src/DTs/DTCliente.cpp
        src/DTs/DTCliente.h
        src/logica/dominio/Cliente.cpp
        src/logica/dominio/Cliente.h
        src/logica/dominio/Vendedor.cpp
        src/logica/dominio/Vendedor.h
        src/presentacion/Menu.cpp
        src/presentacion/Menu.h
        src/DTs/Definiciones.h
        src/presentacion/ConsultarProducto.cpp
        src/presentacion/ConsultarProducto.h
        src/presentacion/CrearPromocion.cpp
        src/presentacion/CrearPromocion.h
        src/presentacion/ConsultarPromocion.cpp
        src/presentacion/ConsultarPromocion.h
        src/logica/dominio/ProdPromocion.cpp
        src/logica/dominio/ProdPromocion.h
        src/logica/dominio/ProdComprado.cpp
        src/logica/dominio/ProdComprado.h
        src/logica/dominio/Comentario.cpp
        src/logica/dominio/Comentario.h
        src/logica/dominio/Promocion.cpp
        src/logica/dominio/Promocion.h
        src/presentacion/EnviarProducto.cpp
        src/presentacion/EnviarProducto.h
        src/presentacion/RealizarCompra.cpp
        src/presentacion/RealizarCompra.h
        src/presentacion/DejarComentario.cpp
        src/presentacion/DejarComentario.h
        src/presentacion/EliminarComentario.cpp
        src/presentacion/EliminarComentario.h
        src/presentacion/ExpedienteUsuario.cpp
        src/presentacion/ExpedienteUsuario.h

)


